--- a/Love/AndroidManifest.xml
+++ b/Love/AndroidManifest.xml
@@ -22,6 +22,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="cc.ccme.love.person.PersonActivity"
+            android:label="@string/title_activity_person" >
+        </activity>
+        <activity android:name="cc.ccme.love.person.PersonEditActivity" >
+        </activity>
+        <activity
+            android:name="cc.ccme.love.event.EventActivity" >
+        </activity>
     </application>
 
 </manifest>
