--- a/Love/AndroidManifest.xml
+++ b/Love/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="18" />
 
     <application
         android:allowBackup="true"
@@ -30,6 +30,9 @@
         </activity>
         <activity
             android:name="cc.ccme.love.event.EventActivity" >
+        </activity>
+        <activity
+            android:name="cc.ccme.love.event.EventCreateActivity" >
         </activity>
     </application>
 
