git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1438 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/AndroidManifest.xml
+++ b/Love/AndroidManifest.xml
@@ -28,11 +28,13 @@
         </activity>
         <activity android:name="cc.ccme.love.person.PersonEditActivity" >
         </activity>
-        <activity
-            android:name="cc.ccme.love.event.EventActivity" >
+        <activity android:name="cc.ccme.love.event.EventActivity" >
+        </activity>
+        <activity android:name="cc.ccme.love.event.EventCreateActivity" >
         </activity>
         <activity
-            android:name="cc.ccme.love.event.EventCreateActivity" >
+            android:name="cc.ccme.love.event.EventDetailActivity"
+             >
         </activity>
     </application>
 
