git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1458 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/AndroidManifest.xml
+++ b/Love/AndroidManifest.xml
@@ -39,6 +39,10 @@
             android:theme="@style/DialogTheme" >
         </activity>
         <activity
+            android:name="cc.ccme.love.album.GalleryActivity"
+            >
+        </activity>
+        <activity
             android:name="cc.ccme.love.album.AlbumActivity"
             >
         </activity>
