--- a/Love/AndroidManifest.xml
+++ b/Love/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -38,13 +40,15 @@
             android:name="cc.ccme.love.event.EventDialogActivity"
             android:theme="@style/DialogTheme" >
         </activity>
-        <activity
-            android:name="cc.ccme.love.album.GalleryActivity"
-            >
+        <activity android:name="cc.ccme.love.album.GalleryActivity" >
+        </activity>
+        <activity android:name="cc.ccme.love.album.AlbumActivity" >
         </activity>
         <activity
-            android:name="cc.ccme.love.album.AlbumActivity"
-            >
+            android:name="cc.ccme.love.album.AlbumContentActivity" >
+        </activity>
+        <activity
+            android:name="cc.ccme.love.album.AlbumGalleryActivity" >
         </activity>
     </application>
 
