git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1482 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/AndroidManifest.xml
+++ b/Love/AndroidManifest.xml
@@ -7,8 +7,9 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -44,11 +45,13 @@
         </activity>
         <activity android:name="cc.ccme.love.album.AlbumActivity" >
         </activity>
-        <activity
-            android:name="cc.ccme.love.album.AlbumContentActivity" >
+        <activity android:name="cc.ccme.love.album.AlbumContentActivity" >
+        </activity>
+        <activity android:name="cc.ccme.love.album.AlbumGalleryActivity" >
         </activity>
         <activity
-            android:name="cc.ccme.love.album.AlbumGalleryActivity" >
+            android:name="cc.ccme.love.video.VideoActivity"
+             >
         </activity>
     </application>
 
