git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1488 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/AndroidManifest.xml
+++ b/Love/AndroidManifest.xml
@@ -49,8 +49,10 @@
         </activity>
         <activity android:name="cc.ccme.love.album.AlbumGalleryActivity" >
         </activity>
+        <activity android:name="cc.ccme.love.video.VideoActivity" >
+        </activity>
         <activity
-            android:name="cc.ccme.love.video.VideoActivity"
+            android:name="cc.ccme.love.video.VideoImagePickActivity"
              >
         </activity>
     </application>
