--- a/Love/project.properties
+++ b/Love/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=../library_slidingmenu
+android.library.reference.1=..\\library_slidingmenu
+android.library.reference.2=../library_gallery
