git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1525 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/AndroidManifest.xml
+++ b/Love/AndroidManifest.xml
@@ -55,6 +55,12 @@
             android:name="cc.ccme.love.video.VideoImagePickActivity"
              >
         </activity>
+        <activity android:name="cc.ccme.love.video.VideoImageSelectBaseActivity" >
+        </activity>
+        <activity android:name="cc.ccme.love.video.ImagePickActivity" >
+        </activity>
+        <activity android:name="cc.ccme.love.video.VideoPickActivity" >
+        </activity>
     </application>
 
 </manifest>
