git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1549 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/AndroidManifest.xml
+++ b/Love/AndroidManifest.xml
@@ -59,13 +59,11 @@
         </activity>
         <activity android:name="cc.ccme.love.video.VideoPickActivity" >
         </activity>
-        <activity
-            android:name="cc.ccme.love.congrate.CongrateActivity"
-             >
+        <activity android:name="cc.ccme.love.congrate.CongrateActivity" >
         </activity>
-        <activity
-            android:name="cc.ccme.love.congrate.CongratePostActivity"
-             >
+        <activity android:name="cc.ccme.love.congrate.CongratePostActivity" >
+        </activity>
+        <activity android:name="cc.ccme.love.settings.SettingsActivity" >
         </activity>
     </application>
 
