--- a/Love/AndroidManifest.xml
+++ b/Love/AndroidManifest.xml
@@ -65,6 +65,8 @@
         </activity>
         <activity android:name="cc.ccme.love.settings.SettingsActivity" >
         </activity>
+        <activity android:name="cc.ccme.love.broadcast.BroadcastCommentActivity" >
+        </activity>
     </application>
 
 </manifest>
