--- a/Love/AndroidManifest.xml
+++ b/Love/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name="cc.ccme.love.MyApplication" >
         <activity android:name="cc.ccme.love.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
